--- a/popup.html
+++ b/popup.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live IPL Score</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Live IPL Score</p>
+    <p class="heading">Live IPL Score and Status</p>
     <div id="score-div">
         <p id="score"></p>
     </div>
