Refactor code and update UI elements

--- a/popup.html
+++ b/popup.html
@@ -10,8 +10,9 @@
     <p class="heading">Live IPL Score and Status</p>
     <div id="score-div">
         <p id="score"></p>
+        <!-- <p class="stats"></p> -->
     </div>
-    <span id="test"></span>
+    
 </body>
 <script src="index.js"></script>
 </html>
